converted to arrow functions

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="normal text">Normal</h1>
+        <h1 class="normal text">Sample Text</h1>
     </div>
 
     <div class="buttons">
         <div class="button bold boldButton">Bold</div>
         <div class="button italic italicButton">Italic</div>
-        <div class="button under-line underLineButton">Underline</div>
+        <div class="button underline underLineButton">Underline</div>
     </div>
 
     <div class="container2">
